--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,10 @@ body{
 }
 
 .nombre{
+text-align: center;
 font-family: 'Acme', sans-serif;
-font-size: 15vh;
+font-size: 100%;
+font-size: 80px;
 }
 
 .descripcion{
@@ -42,10 +44,16 @@ mix-blend-mode: overlay;
 
 .about-me{
     font-family: 'Libre Bodoni', serif;
-    font-size: 24px;
+    font-size: 100%;
     color: rgb(255, 255, 255);
     
     
+}
+.flex{
+    display: flex;
+}
+.img{
+    margin-top: 25%;
 }
 
 .border{
@@ -55,12 +63,12 @@ mix-blend-mode: overlay;
 }
 .Fotografo{
     width: 100%;
-    height: 500px;
+    height: 100%;
     margin-top: 26px;
     border: 3px solid #0e0520;
     border-radius: 50px;
     background: #0e0520;
-    box-shadow: 6px 6px 15px 9px  black;
+    box-shadow: 6px 6px 15px   black;
     position: relative;
 }
 
