--- a/styles.css
+++ b/styles.css
@@ -44,18 +44,12 @@ mix-blend-mode: overlay;
 
 .about-me{
     font-family: 'Libre Bodoni', serif;
-    font-size: 100%;
+    font-size: 20px;
     color: rgb(255, 255, 255);
     align-items: center;
     text-align: center;
     
     
-}
-.flex{
-    display: flex;
-}
-.img{
-    margin-top: 25%;
 }
 
 .centrado{
@@ -69,10 +63,15 @@ mix-blend-mode: overlay;
     filter: blur(5px);
 }
 .Fotografo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
     width: 100%;
     height: 100%;
-    position: relative;
-    top: 0%;
+    max-height: 400px;
+    min-height: 200px;
+    max-width:fit-content;
     border: 3px solid #0e0520;
     border-radius: 50px;
     background: #0e0520;
@@ -126,13 +125,16 @@ mix-blend-mode: overlay;
     
 }
 .box3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     background: #373B44;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #4286f4, #1b4ec5);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #4286f4, #373B44); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: linear-gradient(to bottom, #240d52, #836c20); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 overflow: hidden;
     width: 100%;
-    height: 560px;
+    
     
 }
 .box4{
