--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ mix-blend-mode: overlay;
     margin-right: 20px;
 }
 .contenedorimg{
+    margin: 7px;
     overflow: hidden;
     max-height: 300px;
     width: 100%;
@@ -82,7 +83,7 @@ mix-blend-mode: overlay;
     overflow: hidden;
     height: 100%;
     width: 100%;
-    max-width: 100px;
+    
     
 }
 .textcentrado{
