--- a/styles.css
+++ b/styles.css
@@ -65,13 +65,14 @@ mix-blend-mode: overlay;
     margin: 7px;
     overflow: hidden;
     max-height: 300px;
-    width: 100%;
+    width: 300px;
     
 
 }       
 .carousel .item {
     height: 100%;
     max-height: 500px;
+    min-height: 100px;
   }
   
   .item img {
