--- a/styles.css
+++ b/styles.css
@@ -139,9 +139,6 @@ mix-blend-mode: overlay;
     
 }
 .Fotografo{
-    display: flex;
-    align-items: center;
-    justify-content: center;
     
     width: 100%;
     height: 100%;
@@ -154,9 +151,30 @@ mix-blend-mode: overlay;
     box-shadow: 6px 6px 15px   black;
     
 }
+.contenedorx{
+    width: 100%;
+    height: 400px;
+}
 
 
-
+.info p{
+    background-color: #373b44c0;
+    border-radius: 9px;
+    font-size: 100%;
+}
+.titulo span{
+    font-size: 4vh;
+    text-align: center;
+    align-items: center;
+}
+.titulo span.nombre{
+    font-size: 7vh;
+}
+.fondocv{
+    background-image: url("CV/imagencv.png");
+    
+    background-size: cover;
+}
 #je{
     min-width: 100%;
 }
@@ -222,12 +240,12 @@ overflow: hidden;
     
 }
 .box5{
+    padding-top: 30px;
     background-color: rgb(255, 174, 0);
     width: 100%;
-    height: 400px;
+    height: 1500px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    
 }
 .box6{
     background-color: rgb(33, 34, 34);
