--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,6 @@
     font-family: 'Libre Bodoni', serif;
     color: white;
 }
-body{
-    font-family: 'Roboto Condensed', sans-serif;
-}
-.jobs{
-    display: grid;
-}
-.jobs h2{
-    font-size: 60px;
-}
 @media screen and  (min-width: 768px){
     .fondocv{
         background-image: url("CV/imagencv.png");
@@ -31,9 +22,14 @@ body{
         border-radius: 9px;
         font-size: 20px; 
     }
-
-    
+} 
+.jobs{
+    display: grid;
 }
+.jobs h2{
+    font-size: 60px;
+}
+
 ul{
     background-color: #1a2738;
 }
@@ -41,9 +37,36 @@ ul{
 .li_separado  ul  li{
     margin-bottom: 20px;
 }
-.textcentrado{
-    text-align: center;
+.li_separado>h4>img{
+    object-fit: fill;
+    height: 40px;
+    width: 40px;
 }
+.li_separado>h4{
+    color: #ceaa33;
+}
+li>span{
+    font-size: 13px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+#estudios{
+    width: 50px; 
+    height: 50px;
+}
+#maletin{
+    width: 37px;
+    height: 37px;
+}
+#tecnologias{
+    width: 43px;
+    height: 43px;
+}
+#habilidades{
+    width: 50px;
+    height: 50px;
+}
+
+
 .separado{
     width: 100%;
     position: absolute;
@@ -101,15 +124,8 @@ font-size: 80px;
 font-size: 3vh;
 }
 
-.flex{
-    display: flex;
-}
-.bodoni{
-    font-family: 'Libre Bodoni', serif;
-    color: white;
-}
+
 .letras{
-    color: white;
     background-color: #1b1b2269;
     border-radius: 10px;
 }
@@ -151,15 +167,11 @@ mix-blend-mode: overlay;
     height: 100%;
 }
 .about-me{
-    font-family: 'Libre Bodoni', serif;
     font-size: 20px;
     color: rgb(255, 255, 255);
     align-items: center;
     text-align: center;
     
-}
-.lp{
-    margin-right: 20px;
 }
 .contenedorimg{
     
@@ -174,29 +186,29 @@ mix-blend-mode: overlay;
     background-color: black;
     color: white;
 }
-.fit{
-   object-fit: con;
-}
+
 .carousel .item {
     height: 100%;
     max-height: 500px;
     min-height: 100px;
-  }
-  
-  .item img {
-      width: 100%;
-      
-  }
+}
+
+.item img {
+    width: 100%;
+
+}
 
 .imgtrabajo{
     max-height:90px ;
     height: 100%;
     width: 100%;
-   
-    
-    
 }
 .textcentrado{
+    text-align: center;
+}
+.itemscentrados{
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 .correccion{
@@ -210,11 +222,7 @@ mix-blend-mode: overlay;
     text-align: center;
     
 }
-.border{
-    border: 2px solid red;
-    border-radius: 50px;
-    
-}
+
 .Fotografo{
     
     width: 100%;
@@ -228,11 +236,6 @@ mix-blend-mode: overlay;
     box-shadow: 6px 6px 15px   black;
     
 }
-.contenedorx{
-    width: 100%;
-    height: 400px;
-}
-
 
 .info p{
     background-color: rgba(0, 0, 0, 0.418);
@@ -276,9 +279,7 @@ mix-blend-mode: overlay;
     width: 100%;
 }
 
-.pading{
-    margin-bottom: 40px;
-}
+
 .pad{
     margin: 10px;
     font-size: 20px;
@@ -323,7 +324,7 @@ overflow: hidden;
     padding-top: 30px;
     background: linear-gradient(to bottom, #10161e,#1a2738);
     width: 100%;
-    height: 1500px;
+    height: 100%;
     display: flex;
     
 }
