--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     }
     .titulo span{
         font-size: 10vh;
+        padding-left: 8px;
         text-align: center;
         align-items: center;
         
