--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@
     }
     .titulo span{
         font-size: 10vh;
-        padding-left: 8px;
         text-align: center;
         align-items: center;
         
@@ -248,6 +247,8 @@ mix-blend-mode: overlay;
     border-radius: 9px;
     font-size: 100%;
     margin-bottom: 150px;
+    padding-left: 8px;
+    padding-right: 5px;
 }
 .titulo span{
     font-size: 4vh;
