--- a/styles.css
+++ b/styles.css
@@ -271,6 +271,35 @@ p > ul > li > span {
 
   text-decoration: none;
 }
+@media screen and (max-width: px) {
+  .fondocv {
+    background-image: url("CV/imagencv.png");
+    background-size: cover;
+    object-fit: cover;
+    height: 560px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .fondocv {
+    background-image: url("CV/imagencv.png");
+    background-size: cover;
+    object-fit: cover;
+    height: 500px;
+  }
+  .titulo span {
+    font-size: 3vh;
+    text-align: center;
+    align-items: center;
+  }
+  .titulo span.nombre {
+    font-size: 47px;
+  }
+  .info {
+    border-radius: 9px;
+    font-size: 16px;
+  }
+}
 
 @media screen and (min-width: 1700px) {
   * {
