--- a/styles.css
+++ b/styles.css
@@ -267,12 +267,17 @@ p > ul > li > span {
 
   text-decoration: none;
 }
-@media screen and (max-width: px) {
+@media screen and (max-width: 1700px) {
   .fondocv {
     background-image: url("CV/imagencv.png");
     background-size: cover;
     object-fit: cover;
-    height: 560px;
+    height: 460px;
+  }
+
+  .info {
+    border-radius: 9px;
+    font-size: 2vh;
   }
 }
 
