--- a/styles.css
+++ b/styles.css
@@ -364,7 +364,7 @@ p > ul > li > span {
   }
   @media screen and (max-width: 553px) {
     #navbar {
-      font-size: 14px;
+      font-size: 12px;
       background-color: #0e0520;
       display: flex;
       justify-content: space-between;
@@ -427,6 +427,45 @@ p > ul > li > span {
 @media screen and (min-width: 1700px) {
   * {
     font-size: 30px;
+  }
+  #navbar {
+    font-size: 40px;
+    background-color: #0e0520;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 4px 5%;
+    height: 90px;
+  }
+  #navbar a svg {
+    position: relative;
+    top: 0;
+    height: 120px;
+  }
+  #navbar a {
+    text-decoration: none;
+    color: white;
+    text-shadow: 0px 10px 10px#000000;
+    transition: all 0.1s;
+  }
+  #navbar ul {
+    list-style: none;
+    margin-bottom: 0;
+    padding: 0;
+  }
+  #navbar ul li {
+    display: inline-block;
+    padding: 0 20px;
+    transition: all 0.1s;
+  }
+  #navbar ul li:hover {
+    transform: scale(1.2);
+  }
+  #navbar a:hover {
+    background-color: #0099ff;
+    padding: 4px;
+    border-radius: 20px;
+    transform: scale(1.2);
   }
   .about-me {
     font-size: 30px;
