--- a/styles.css
+++ b/styles.css
@@ -362,9 +362,9 @@ p > ul > li > span {
     border-radius: 20px;
     transform: scale(1.2);
   }
-  @media screen and (max-width: 553px) {
+  @media screen and (max-width: 476px) {
     #navbar {
-      font-size: 12px;
+      font-size: calc(0.3vw + 0.78em);
       background-color: #0e0520;
       display: flex;
       justify-content: space-between;
