--- a/styles.css
+++ b/styles.css
@@ -362,9 +362,51 @@ p > ul > li > span {
     border-radius: 20px;
     transform: scale(1.2);
   }
-  @media screen and (max-width: 476px) {
+
+  @media screen and (max-width: 475px) {
     #navbar {
-      font-size: calc(0.3vw + 0.78em);
+      font-size: 17px;
+      background-color: #0e0520;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 4px 5%;
+      height: 80px;
+    }
+    #navbar a svg {
+      position: relative;
+      top: 0;
+      height: 20px;
+    }
+    #navbar a {
+      text-decoration: none;
+      color: white;
+      text-shadow: 0px 10px 10px#000000;
+      transition: all 0.1s;
+    }
+    #navbar ul {
+      list-style: none;
+      margin-bottom: 0;
+      padding: 0;
+    }
+    #navbar ul li {
+      display: inline-block;
+      padding: 0 10px;
+      transition: all 0.1s;
+    }
+    #navbar ul li:hover {
+      transform: scale(1.2);
+    }
+    #navbar a:hover {
+      background-color: #0099ff;
+      padding: 4px;
+      border-radius: 20px;
+      transform: scale(1.2);
+    }
+  }
+  @media screen and (max-width: 446px) {
+    #navbar {
+      font-size: 12px;
       background-color: #0e0520;
       display: flex;
       justify-content: space-between;
